testsuite/tests/deriving/should_fail/T7148.stderr

T7148.hs:27:40: error:
    • Couldn't match type ‘b’ with ‘Tagged a b’
        arising from the coercion of the method ‘iso2’
          from type ‘forall b. SameType b () -> SameType b b’
            to type ‘forall b. SameType b () -> SameType b (Tagged a b)’
      ‘b’ is a rigid type variable bound by
        the deriving clause for ‘IsoUnit (Tagged a b)’ at T7148.hs:27:40-46
    • When deriving the instance for (IsoUnit (Tagged a b))

T7148.hs:27:40: error:
    • Couldn't match type ‘b’ with ‘Tagged a b’
        arising from the coercion of the method ‘iso1’
          from type ‘forall b. SameType () b -> SameType b b’
            to type ‘forall b. SameType () b -> SameType (Tagged a b) b’
      ‘b’ is a rigid type variable bound by
        the deriving clause for ‘IsoUnit (Tagged a b)’ at T7148.hs:27:40-46
    • When deriving the instance for (IsoUnit (Tagged a b))
